WIP: Filters are aligned correctly but don't scroll

--- a/frontend/src/components/SelectFilter.module.css
+++ b/frontend/src/components/SelectFilter.module.css
@@ -1,79 +1,58 @@
 .select-filter {
+    background-color: pink;
+    padding: 10px 0px;
+
+    align-self: flex-start;
+
     margin-bottom: 80px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     gap: 5px;
+
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
 }
 
-.inner-filters {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-}
+.select-filter::-webkit-scrollbar {
+    display: none;
+  }
 
-.inner-filters-wrap-mobile {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-}
-
-.filter-button-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: var(--filter-padding);
-    gap: 15px;
-    font-size: var(--size-small);
+.filter-icon {
+    padding-right: 15px;
 }
 
 .filter-option {
     border: var(--filter-border);
     opacity: var(--filter-opacity);
     min-height: var(--button-max-height);
+    gap: 8px;
 }
 
 .close-filter {
-    height: var(--button-max-height);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0px -10px 0px -5px;
+    margin-right: -8px;
 }
 
-.filter-icon {
-    padding-right: 15px;
-}
 
 @media screen and (max-width: 845px) {
-    .select-filter {
-        flex-direction: column;
-        gap: 10px;
-        margin-bottom: 60px;
+    .filter-option {
+        padding: 0px 10px;
+        gap: 5px;
     }
 
-    .filter-icon {
-        padding-right: 0px;
-    }
-
-    .close-filter-icon {
+    .close-filter {
+        margin-right: -2px;
         height: 22px;
         width: auto;
     }
 }
 
 @media screen and (max-width: 420px) {
-    .inner-filters-wrap-mobile {
-        flex-direction: column;
-        gap: 10px;
-    }
-
-    .close-filter-icon {
+    .close-filter {
         height: 18px;
     }
 }
